fix: Bug in the top "join" button on gallery.html and form.html. Add spacing in form.html for mobile and medium screen sizes

--- a/assets/style.css
+++ b/assets/style.css
@@ -54,6 +54,18 @@ h2 {
     position: absolute; 
 }
 
+.join-btn {
+    background-color: rgba(255,255,255,0.2);
+    color: #fff;
+    transition: all 0.5s ease
+}
+
+.join-btn:hover {
+    background-color: #fff;
+    color: #24262b;
+}
+
+
 
 
 #hero{
@@ -80,16 +92,6 @@ h2 {
    margin-right: 2rem;
 }
 
-.join-btn {
-    background-color: rgba(255,255,255,0.2);
-    color: #fff;
-    transition: all 0.5s ease
-}
-
-.join-btn:hover {
-    background-color: #fff;
-    color: #24262b;
-}
 
 /* Buttons */
 
@@ -128,7 +130,8 @@ h2 {
 }
 
 .c-item {
-    height: 420px;
+    height: 350px;
+    object-fit: cover;
 
 
 }
